Fixed alignment of hovered text.

--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,20 @@
 
 .introButtonContainer {
   position: relative;
-  z-index: 1;
+  display: inline-block;
 }
 .introButton {
   background-color: #242424;
   width: 500px;
   height: 300px;
   font-size: 50px;
+  z-index: 1;
 }
 
 .hoverMessageIntro{
-  text-align: center;
+  bottom: 75%;
+  left: 47%;
+  transform: translateX(-50%);
   position: absolute;
   z-index: 100;
 }
